--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body, html {
   background-size: cover;
   background-image: url("https://res.cloudinary.com/dpb0o6dli/image/upload/v1630000182/wallpaperflare.com_wallpaper_2_k8gft0.jpg");
   min-height: 75%;
-  opacity: 0.5;
+  
 }
 
 #GoogleForm{
@@ -131,11 +131,11 @@ body, html {
 </div>
 <br><br>
 <div id="GoogleForm">
-    <h3 style="text-align:center">GOOGLE FORM</h3><br>
+    <h3 style="text-align:center">ANSWER</h3><br>
     <div>
-      <a title="Google Form" href="https://forms.gle/F8ubibKwqvRCDYC8A">Click here</a>
-      <p>to fill in the Google form to answer the question.<br>
-        Please provide appropriate Answer with Explanations</p>
+      <a title="Google Form" href="https://ppoc-iitk.github.io/MASAAFAT-Q2/">Answer To Proceed</a>
+      <p>and access the next question.<br>
+        </p>
     </div>
 </div>
 <br>
