--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ body, html {
 <div id="GoogleForm">
     <h3 style="text-align:center">ANSWER</h3><br>
     <div>
-      <a title="Google Form" href="https://ppoc-iitk.github.io/MASAAFAT-Q2/">Answer To Proceed</a>
+      <a title="Google Form" href="https://ppoc-iitk.github.io/MASAAFAT-Q2-4eRABH/">Answer To Proceed</a>
       <p>and access the next question.<br>
         </p>
     </div>
