--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@ body, html {
   
 }
 
+#GoogleForm2{
+    border-style: solid;
+    border-color: #404040;
+    border-radius: 4px;
+    padding: 10px 10px;
+    padding-bottom: 30px;
+    max-width:100%;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
 #GoogleForm{
     border-style: solid;
     border-color: #404040;
@@ -33,6 +45,11 @@ body, html {
     
 }
 
+#GoogleForm2:hover{
+    background-color:#f7f7f7;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
 #GoogleForm:hover{
     background-color:#f7f7f7;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -87,6 +104,9 @@ body, html {
   background-color: white;
   color: #202020;
 }
+.headd{
+  font-size:40px;
+}
 </style>
 <body>
 <div class="x-top">
@@ -109,7 +129,8 @@ body, html {
 <!-- Header with image -->
 <header class="bgimg x-display-container x-grayscale-min" id="home">
   <div class="x-display-middle x-center">
-    <span class="x-text-white" style="font-size:90px">IGS-21<br>MASAAFAT</span>
+    <div class="headd"><h1><b>Indian Government Summit - 2021</b></h1>presents</div>
+    <div class="rec"> <img class="pak" src="Untitled.png" width= "100%" alt="Girl in a jacket"></div>
   </div>
 </header>
 
@@ -118,10 +139,15 @@ body, html {
 
 
 <div class="x-container" id="question">
-  <div class="x-content" style="max-width:700px">
-    <h5 class="x-center x-padding-64"><span class="x-tag x-wide" style="font-size: 30px;">QUESTION</span></h5>
-    <p>The next place is a place of education. This college is known for its close association with Indian Politics. Its founders were pioneers of The Indian National Congress as well as Indian Socialist Movement. The college has produced notable alumni including two Indian Prime Ministers - P.V. Narsimha Rao and Vishwanath Pratap Singh
-        When you click on the 360 degree view, You observe a sign mentioning the name of department in which this college offers a degree in bachelor of arts. Let 'X' be the number of letters in the word written on that sign. Also, let 'Y' be the number of females on cycle as seen in the whole 360 degree view. Mention 'X+Y'</p>
+  <div class="x-content" style="max-width:700px;">
+   
+    <h5 class="x-center x-padding-64"><span class="x-tag x-wide" style="font-size: 30px;">QUESTION 1</span></h5>
+    <div style="text-align:center;">
+    <img src="ppp.jpg" style="width:50%;max-width:1000px;margin-left: auto;margin-right: auto" class="x-margin-top">
+    </div>
+    <p>Here's a satellite view of the place where I'm located. Well, be it a hotel, a park or the blue waters I'm surrounded by all;) Let me also give a hint about the church that you might be able to see. It serves as the seat of an archbishop who happens to be appointed by the world’s first pope to resign in almost 600 years. 
+      Guess who I am?      
+      </p>
     <div class="x-panel x-leftbar x-light-grey">
       <p><i>"It's not about the treasure - it's about the hunt. -Abigail</i></p>
       <p>-William Ritter</p>
@@ -133,7 +159,7 @@ body, html {
 <div id="GoogleForm">
     <h3 style="text-align:center">ANSWER</h3><br>
     <div>
-      <a title="Google Form" href="https://ppoc-iitk.github.io/MASAAFAT-Q2/">Answer To Proceed</a>
+      <a title="Google Form" href="https://ppoc-iitk.github.io/MASAAFAT-Q2-4eRABH/">Answer To Proceed</a>
       <p>and access the next question.<br>
         </p>
     </div>
