--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ body, html {
     border-radius: 4px;
     padding: 10px 10px;
     padding-bottom: 30px;
-    max-width:80%;
+    max-width:100%;
     margin-left: auto;
     margin-right: auto;
     
@@ -148,34 +148,41 @@ body, html {
     <p>Here's a satellite view of the place where I'm located. Well, be it a hotel, a park or the blue waters I'm surrounded by all;) Let me also give a hint about the church that you might be able to see. It serves as the seat of an archbishop who happens to be appointed by the world’s first pope to resign in almost 600 years. 
       Guess who I am?      
       </p>
-    <div class="x-panel x-leftbar x-light-grey">
-      <p><i>"It's not about the treasure - it's about the hunt. -Abigail</i></p>
-      <p>-William Ritter</p>
-    </div>
-    <img src="https://res.cloudinary.com/dpb0o6dli/image/upload/v1630001180/Sg5pZF_1_v8qmjy.jpg" style="width:100%;max-width:1000px" class="x-margin-top">
-  </div>
-</div>
-<br><br>
+      <br><br>
 <div id="GoogleForm">
     <h3 style="text-align:center">ANSWER</h3><br>
-    <div>
-      <a title="Google Form" href="https://ppoc-iitk.github.io/MASAAFAT-Q2-4eRABH/">Answer To Proceed</a>
-      <p>and access the next question.<br>
-        </p>
+    <div style="text-align:center;">
+      <a title="Google Form" href="https://masaafat-q2-4epa5t.herokuapp.com/">
+      <button style = "background-color:  #000000;color:#f7f7f7">
+        <h4>
+        Answer To Proceed
+      and Access The Next Question -><br>
+        </h4>
+      </button>
+    </a>
     </div>
 </div>
 <br>
+      <div class="x-panel x-leftbar x-light-grey">
+        <p><i>"It's not about the treasure - it's about the hunt. -Abigail</i></p>
+        <p>-William Ritter</p>
+      </div>
+    <!-- <img src="https://res.cloudinary.com/dpb0o6dli/image/upload/v1630001180/Sg5pZF_1_v8qmjy.jpg" style="width:100%;max-width:1000px" class="x-margin-top"> -->
+  </div>
 </div>
 
-<div class="x-container" id="NEXT">
+
+</div>
+
+<!-- <div class="x-container" id="NEXT">
   <div class="x-content" style="max-width:700px">
     <h5 class="x-center x-padding-64"><span class="x-tag x-wide" style="font-size: 30px;">NEXT MYSTERY</span></h5>
     <p>Great! You solved the puzzle!<br>Let your Answer of the question be '<i>Answer</i>'
     Then the next portal wil have the url of the form: templat<br>
   Type that into the brower and there you go</p>
   </div>
-</div>
-<br><br>
+</div> -->
+
 
 <!-- Footer -->
 
