--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ body, html {
 <div id="GoogleForm">
     <h3 style="text-align:center">ANSWER</h3><br>
     <div style="text-align:center;">
-      <a title="Answer" href="https://masaafat-q2-4epa5t.herokuapp.com/">
+      <a title="Answer" href="https://ppoc-iitk.github.io/MASAAFAT-Q2-4eRABH/">
       <button style = "background-color:  #000000;color:#f7f7f7">
         <h4>
         Answer To Proceed
